--- v1.2 (2018-xx-xx) ---
* Add ANDROID_SDK_ROOT variable into settings.
* Improve UnpackSources(): more intelligent applying of patches.
* Improve CheckPkgUrl().
* Update packages:
  - openssl: fix PKG_URL_2
  - ffmpeg: update to version 3.4.2
  - sdl2: update to version 2.0.8, delete patch (accepted by upstream)

--- v1.1 (2018-01-24) ---
* Improve static build of openssl package.
* Improve notifications during build of packages.
* Simplify usage of *.patch files: apply them directly from UnpackSources()
  function instead of forcing of usage of additional scripts (see *-patches.sh).
* Simplify GetSources() function: do not check the size of tarballs because
  the checkup of checksum should be enough.

--- v1.0 (2018-01-10) ---
* First public release.
