@@ -1,4 +1,5 @@
 /android-ndk*
+/android-sdk*
 /installed*
 /log*
 /src*
